--- a/webpack-5/package.json
+++ b/webpack-5/package.json
@@ -1,7 +1,7 @@
 {
   "name": "devtool-webpack",
   "version": "1.0.0",
-  "description": "A tooling for web development and prototyping using webpack.",
+  "description": "A setup for frontend web development and prototyping using webpack, Vue.js, and Tailwind CSS.",
   "author": "Lau Tiam Kok",
   "private": true,
   "scripts": {
@@ -14,49 +14,49 @@
     "deploy": "push-dir --dir=dist --branch=gh-pages --cleanup"
   },
   "dependencies": {
-    "@babel/runtime": "^7.11.2",
+    "@babel/runtime": "^7.14.6",
+    "@vue/compiler-sfc": "^3.1.3",
     "axios": "^0.21.1",
-    "mitt": "^2.1.0",
-    "vue": "^2.6.12",
-    "vue-router": "^3.4.3",
+    "mitt": "^3.0.0",
+    "vue": "^2.6.14",
+    "vue-router": "^3.5.2",
     "vue-router-multiguard": "^1.0.3",
-    "vuex": "^3.5.1"
+    "vuex": "^3.6.2"
   },
   "devDependencies": {
-    "@babel/core": "^7.12.3",
-    "@babel/plugin-transform-runtime": "^7.12.1",
-    "@babel/preset-env": "^7.12.1",
+    "@babel/core": "^7.14.6",
+    "@babel/plugin-transform-runtime": "^7.14.5",
+    "@babel/preset-env": "^7.14.7",
     "autoprefixer": "^10.2.6",
-    "babel-loader": "^8.1.0",
-    "clean-webpack-plugin": "^3.0.0",
-    "copy-webpack-plugin": "^6.2.1",
-    "css-loader": "^5.0.0",
-    "css-minimizer-webpack-plugin": "^1.1.5",
-    "file-loader": "^6.1.1",
+    "babel-loader": "^8.2.2",
+    "clean-webpack-plugin": "^4.0.0-alpha.0",
+    "copy-webpack-plugin": "^9.0.1",
+    "css-loader": "^5.2.6",
+    "css-minimizer-webpack-plugin": "^3.0.2",
+    "file-loader": "^6.2.0",
     "html-loader": "^1.3.2",
-    "html-webpack-plugin": "^5.0.0",
-    "less": "^3.12.2",
-    "less-loader": "^7.0.2",
-    "mini-css-extract-plugin": "^1.1.0",
-    "node-sass": "^5.0.0",
+    "html-webpack-plugin": "^5.3.2",
+    "less": "^4.1.1",
+    "less-loader": "^10.0.0",
+    "mini-css-extract-plugin": "^2.0.0",
+    "node-sass": "^6.0.1",
     "postcss": "^8.3.5",
-    "postcss-loader": "^6.1.0",
+    "postcss-loader": "^6.1.1",
     "purgecss": "^4.0.3",
     "push-dir": "^0.4.1",
-    "sass-loader": "^10.0.3",
+    "sass-loader": "^10.2.0",
     "style-loader": "^2.0.0",
     "tailwindcss": "^2.2.4",
-    "terser-webpack-plugin": "^5.0.0",
+    "terser-webpack-plugin": "^5.1.4",
     "url-loader": "^4.1.1",
-    "vue-loader": "^15.9.3",
-    "vue-style-loader": "^4.1.2",
-    "vue-template-compiler": "^2.6.12",
-    "webpack": "^5.1.3",
-    "webpack-bundle-analyzer": "^4.4.1",
-    "webpack-cli": "^4.1.0",
-    "webpack-dev-server": "^3.11.0",
-    "webpack-manifest-plugin": "^3.0.0",
-    "webpack-merge": "^5.2.0",
-    "webpack-nano": "^1.1.0"
+    "vue-loader": "^16.3.0",
+    "vue-style-loader": "^4.1.3",
+    "vue-template-compiler": "^2.6.14",
+    "webpack": "^5.42.0",
+    "webpack-cli": "^4.7.2",
+    "webpack-dev-server": "^3.11.2",
+    "webpack-manifest-plugin": "^3.1.1",
+    "webpack-merge": "^5.8.0",
+    "webpack-nano": "^1.1.1"
   }
 }
